tests/spec/format/snapshots/package_trailing_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn main() {}
  
  // end of file
---
fn main() {}

// end of file
