tests/spec/format/snapshots/paren_expression.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { (1 + 2) * 3 }"
---
fn test() {
  (1 + 2) * 3
}
