tests/spec/format/snapshots/propagate_expression.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { fallible()? }"
---
fn test() {
  fallible()?
}
