tests/spec/format/snapshots/range_exclusive.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 0..10 }"
---
fn test() {
  0..10
}
