tests/spec/format/snapshots/range_in_for.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { for i in 0..3 { print(i) } }"
---
fn test() {
  for i in 0..3 {
    print(i)
  }
}
