tests/spec/format/snapshots/range_inclusive.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { 0..=10 }"
---
fn test() {
  0..=10
}
