tests/spec/format/snapshots/raw_string_roundtrip.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let x = r\"a\\nb\" }"
---
fn test() {
  let x = r"a\nb"
}
