tests/spec/format/snapshots/raw_string_with_regex_roundtrip.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let re = r\"([a-zA-Z])(\\d)\" }"
---
fn test() {
  let re = r"([a-zA-Z])(\d)"
}
