tests/spec/format/snapshots/raw_string_with_windows_path_roundtrip.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let p = r\"C:\\Users\\me\" }"
---
fn test() {
  let p = r"C:\Users\me"
}
