tests/spec/format/snapshots/rawgo_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { @rawgo(\"fmt.Println()\") }"
---
fn test() {
  @rawgo("fmt.Println()")
}
