tests/spec/format/snapshots/recover_block_comment_after.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    recover {}
    // comment
  }
---
fn foo() {
  recover {}
  // comment
}
