tests/spec/format/snapshots/reference.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { &value }"
---
fn test() {
  &value
}
